# cookiecutter-zarr-store

./: README.md  cookiecutter.json
.github/workflows/: build.yml
zarr-{{cookiecutter.zarr_store}}/: .deepsource.toml  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  environment.yml  pyproject.toml  requirements_dev_minimal.txt  requirements_dev_optional.txt
zarr-{{cookiecutter.zarr_store}}/.github/workflows/: codeql-analysis.yml  minimal.yml  needs_release_notes.yml  python-package.yml  releases.yml  windows-testing.yml
zarr-{{cookiecutter.zarr_store}}/docs/: Makefile  api.rst  conf.py  index.rst  release.rst
zarr-{{cookiecutter.zarr_store}}/docs/api/: storage.rst
zarr-{{cookiecutter.zarr_store}}/zarr_{{cookiecutter.zarr_store}}/: __init__.py  storage.py
zarr-{{cookiecutter.zarr_store}}/zarr_{{cookiecutter.zarr_store}}/tests/: test_storage.py
